testemunhas do meu portifolio

--- a/index.html
+++ b/index.html
@@ -140,8 +140,8 @@
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up">
             <div class="count-box">
               <i class="bi bi-emoji-smile"></i>
-              <span data-purecounter-start="0" data-purecounter-end="232" data-purecounter-duration="1" class="purecounter"></span>
-              <p><strong>Happy Clients</strong> consequuntur quae</p>
+              <span data-purecounter-start="0" data-purecounter-end="3000" data-purecounter-duration="1"  class="purecounter"></span>
+              <p><strong>Clientes felizes</strong> atendidos</p>
             </div>
           </div>
 
@@ -156,8 +156,8 @@
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="200">
             <div class="count-box">
               <i class="bi bi-headset"></i>
-              <span data-purecounter-start="0" data-purecounter-end="1453" data-purecounter-duration="1" class="purecounter"></span>
-              <p><strong>Hours Of Support</strong> aut commodi quaerat</p>
+              <span data-purecounter-start="0" data-purecounter-end="2237" data-purecounter-duration="1" class="purecounter"></span>
+              <p><strong>Horas de HOI4</strong></p>
             </div>
           </div>
 
@@ -179,8 +179,8 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Skills</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <h2>Habilidades</h2>
+          <p>Eu possuo um extenso conhecimento em hardware, abrangendo desde componentes até configurações avançadas. Além disso, detenho informática básica (pacote office), e tenho experiência em programação em C++, Java e CSS. Também possuo um conhecimento inicial em SQL. Também possuo habilidades em Photoshop, sendo capaz de editar imagens, também faço modelagem 3D no Blender.</p>
         </div>
 
         <div class="row skills-content">
@@ -188,9 +188,9 @@
           <div class="col-lg-6" data-aos="fade-up">
 
             <div class="progress">
-              <span class="skill">HTML <i class="val">100%</i></span>
+              <span class="skill">HTML <i class="val">85%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -202,9 +202,9 @@
             </div>
 
             <div class="progress">
-              <span class="skill">JavaScript <i class="val">75%</i></span>
+              <span class="skill">JavaScript <i class="val">65%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -213,23 +213,23 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
 
             <div class="progress">
-              <span class="skill">PHP <i class="val">80%</i></span>
+              <span class="skill">Blender <i class="val">75%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">WordPress/CMS <i class="val">90%</i></span>
+              <span class="skill">Conhecimentos em Hardware <i class="val">100%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">Photoshop <i class="val">55%</i></span>
+              <span class="skill">Photoshop <i class="val">85%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -251,53 +251,53 @@
 
         <div class="row">
           <div class="col-lg-6" data-aos="fade-up">
-            <h3 class="resume-title">Sumary</h3>
+            <h3 class="resume-title">Sumário</h3>
             <div class="resume-item pb-0">
               <h4>André Toshiro</h4>
-              <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
+              <p><em>Informações:</em></p>
               <ul>
-                <li>Portland par 127,Orlando, FL</li>
-                <li>(123) 456-7891</li>
-                <li>alice.barkley@example.com</li>
+                <li>Endereço: Jardim São Miguel, Cotia, 109</li>
+                <li>Telefone: (11) 98895-1193</li>
+                <li>Email Profissional: andresudooficial@outlook.com</li>
               </ul>
             </div>
 
-            <h3 class="resume-title">Education</h3>
+            <h3 class="resume-title">Formação Acadêmica</h3>
             <div class="resume-item">
-              <h4>Master of Fine Arts &amp; Graphic Design</h4>
-              <h5>2015 - 2016</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
+              <h4>Ensino Médio</h4>
+              <h5>2022 - presente</h5>
+              <p><em>E.E. Solon Borges dos Reis</em></p>
+              <p>Ensino médio é a fase final da educação básica no Brasil, focada em preparar os alunos para o mercado de trabalho e para o ingresso no ensino superior.</p>
             </div>
             <div class="resume-item">
-              <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
-              <h5>2010 - 2014</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
+              <h4>Curso profissionalizante: <br>Informatica para internet</h4>
+              <h5>2022 - presente</h5>
+              <p><em>E.E. Solon Borges dos Reis</em></p>
+              <p>Nas aulas do curso profissionalizante, nós aprendemos a programar em Java, C++, CSS e SQL Server. As atividades incluem a criação de projetos práticos, focados em nos preparar para o mercado de trabalho, desenvolvendo habilidades técnicas e aplicando o conhecimento em situações reais.</p>
             </div>
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-            <h3 class="resume-title">Professional Experience</h3>
+            <h3 class="resume-title">experiência profissonal</h3>
             <div class="resume-item">
-              <h4>Senior graphic design specialist</h4>
-              <h5>2019 - Present</h5>
-              <p><em>Experion, New York, NY </em></p>
+              <h4>Operador de Caixa</h4>
+              <h5>2022 - 2024</h5>
+              <p><em>Bem Me Quer, Jardim São Miguel, Cotia, 109 </em></p>
               <ul>
-                <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-                <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-                <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
+                <li>Atendimento ao Cliente: Receber os clientes, responder perguntas, ajudar com informações sobre produtos e oferecer um atendimento cortês e eficiente.</li>
+                <li>Processamento de Pagamentos: Registrar as compras, escanear os produtos, aplicar descontos e cupons quando necessário e receber pagamentos em dinheiro, cartões de crédito/débito ou outras formas de pagamento. </li>
+                <li>Fechamento do Caixa: Contar o dinheiro no final do turno, garantir que o total de vendas corresponda ao total de pagamentos recebidos, e preparar o relatório de caixa.</li>
+                <li>Organização e Reposição: Manter a área do caixa limpa e organizada, repor sacolas, papéis de recibo e outros materiais necessários, além de garantir que os produtos ao redor do caixa estejam arrumados e atraentes para os clientes.</li>
               </ul>
             </div>
             <div class="resume-item">
-              <h4>Graphic design specialist</h4>
-              <h5>2017 - 2018</h5>
-              <p><em>Stepping Stone Advertising, New York, NY</em></p>
+              <h4>Operador de Caixa</h4>
+              <h5>2024 - presente</h5>
+              <p><em>Barbosa Super Mercado,Av. Antônio Mathias de Camargo, Cotia, 512</em></p>
               <ul>
-                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
+                <li>Atendimento ao Cliente: Receber os clientes, responder perguntas, ajudar com informações sobre produtos e oferecer um atendimento cortês e eficiente.</li>
+                <li>Processamento de Pagamentos: Registrar as compras, escanear os produtos, aplicar descontos e cupons quando necessário e receber pagamentos em dinheiro, cartões de crédito/débito ou outras formas de pagamento.</li>
+                <li>Contabilização de Gastos de Sacolas: Monitorar e registrar o uso de sacolas plásticas, garantindo que todas as informações relacionadas ao consumo sejam precisas e atualizadas.</li>
+                <li>Fechamento do Caixa: Contar o dinheiro no final do turno, garantir que o total de vendas corresponda ao total de pagamentos recebidos, e preparar o relatório de caixa.</li>
               </ul>
             </div>
           </div>
@@ -318,7 +318,7 @@
         <div class="row" data-aos="fade-up">
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="portfolio-flters">
-              <li data-filter="*" class="filter-active">All</li>
+              <li data-filter="*" class="filter-active">Todos</li>
               <li data-filter=".filter-app">App</li>
               <li data-filter=".filter-card">Card</li>
               <li data-filter=".filter-web">Web</li>
@@ -484,12 +484,18 @@
               <div class="testimonial-item" data-aos="fade-up">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
+                  Meu caro,
+<br>
+Analisando seu site, vejo um potencial imenso para aprimorar a mensagem que deseja transmitir. A clareza na apresentação dos produtos e serviços é fundamental para conquistar o eleitorado, digo, os visitantes. Reforçar a identidade visual com elementos patrióticos e de ordem nacional pode fortalecer ainda mais seu apelo. É fundamental que seu site seja bárbaro, no sentido de impactar e ser memorável para quem o visita. Não se esqueça da simplicidade e acessibilidade, fundamentais para alcançar todos os brasileiros. Meu número é 56, cinquenta e seis, 56! Forte abraço e sucesso na jornada!
+<br>
+Atenciosamente,
+<br>
+Enéas Carneiro
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
-                <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
-                <h3>Saul Goodman</h3>
-                <h4>Ceo &amp; Founder</h4>
+                <img src="\assets\img\testimonials\testimonials-1.png" class="testimonial-img" alt="">
+                <h3>Enéias Carneiro</h3>
+                <h4>Deputado &amp; oppenheimer brasileiro</h4>
               </div>
             </div><!-- End testimonial item -->
 
@@ -497,12 +503,14 @@
               <div class="testimonial-item" data-aos="fade-up" data-aos-delay="100">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
+                  Olha aqui, meu amigo, <br>
+
+Eu dei uma olhada no seu site, e preciso ser franco: não gostei muito dessa parte aqui. Acho que tá faltando clareza, entende? Não dá pra entender direito o que você quer comunicar. Você precisa melhorar isso, tá ok? E outra coisa, acho que falta patriotismo aqui. Cadê as cores do Brasil, onde estão os valores que a gente defende? Isso precisa ser corrigido urgente. Vamos botar ordem nisso aí, porque do jeito que tá não tá dando. Tem que ser mais objetivo, mais claro, mais direto. <br> Vamos melhorar isso daqui pra frente, Brasil acima de tudo e Deus acida de todos!!!
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
-                <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
-                <h3>Sara Wilsson</h3>
-                <h4>Designer</h4>
+                <img src="assets\img\testimonials\testimonials-2.png" class="testimonial-img" alt="">
+                <h3>Jair Bolsonaro</h3>
+                <h4>Vice-Presidente</h4>
               </div>
             </div><!-- End testimonial item -->
 
@@ -510,12 +518,12 @@
               <div class="testimonial-item" data-aos="fade-up" data-aos-delay="200">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor labore quem eram duis noster aute amet eram fore quis sint minim.
+                  site que você mostrou tá assim, tipo, não tá muito legal não. Tipo, não dá pra entender nada, mano. Precisa de mais coisa, mais tipo, cores e tals. E tipo assim, mais fácil de navegar, sabe? Eu acho que assim fica melhor, sei lá. Boa sorte aí.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
-                <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
-                <h3>Jena Karlis</h3>
-                <h4>Store Owner</h4>
+                <img src="assets\img\testimonials\testimonials-3.png" class="testimonial-img" alt="">
+                <h3>Pai do Thyrd</h3>
+                <h4>Filho de papai</h4>
               </div>
             </div><!-- End testimonial item -->
 
