--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@ Atenciosamente,
 Enéas Carneiro
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
-                <img src="\assets\img\testimonials\testimonials-1.png" class="testimonial-img" alt="">
+                <img src="assets\img\testimonials\testimonials-1.png" class="testimonial-img" alt="">
                 <h3>Enéias Carneiro</h3>
                 <h4>Deputado &amp; oppenheimer brasileiro</h4>
               </div>
@@ -510,7 +510,7 @@ Eu dei uma olhada no seu site, e preciso ser franco: não gostei muito dessa par
                 </p>
                 <img src="assets\img\testimonials\testimonials-2.png" class="testimonial-img" alt="">
                 <h3>Jair Bolsonaro</h3>
-                <h4>Vice-Presidente</h4>
+                <h4>Ex-Presidente</h4>
               </div>
             </div><!-- End testimonial item -->
 
@@ -531,12 +531,13 @@ Eu dei uma olhada no seu site, e preciso ser franco: não gostei muito dessa par
               <div class="testimonial-item" data-aos="fade-up" data-aos-delay="300">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim velit minim dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.
+                  Miauaunn, miauaua, miauaunn, miauaunn, miauaua, miauaunn! Miauaunn, miauaua, miauaunn, miauaunn, miauaua, miauaunn! Miauaunn, miauaua, miauaunn, miauaunn, miauaua, miauaunn! <br> <br>
+                  *Translate: "Estou tão confortável aqui, ai você vem coom essa merda de site?! Aja paciencia heim. Humanos e seus desejos estranhos de portifólios nada organizados!"*
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
-                <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
-                <h3>Matt Brandon</h3>
-                <h4>Freelancer</h4>
+                <img src="assets\img\testimonials\testimonials-4.png" class="testimonial-img" alt="">
+                <h3>El Gato</h3>
+                <h4>El gato</h4>
               </div>
             </div><!-- End testimonial item -->
 
@@ -613,15 +614,15 @@ Eu dei uma olhada no seu site, e preciso ser franco: não gostei muito dessa par
                 <input type="text" class="form-control" name="subject" id="subject" required>
               </div>
               <div class="form-group">
-                <label for="name">Message</label>
+                <label for="name">Mensagens</label>
                 <textarea class="form-control" name="message" rows="10" required></textarea>
               </div>
               <div class="my-3">
                 <div class="loading">Loading</div>
                 <div class="error-message"></div>
-                <div class="sent-message">Your message has been sent. Thank you!</div>
+                <div class="sent-message">Sua mensagem foi enviada. Muito obrigado!</div>
               </div>
-              <div class="text-center"><button type="submit">Send Message</button></div>
+              <div class="text-center"><button type="submit">Enviando</button></div>
             </form>
           </div>
 
@@ -636,7 +637,7 @@ Eu dei uma olhada no seu site, e preciso ser franco: não gostei muito dessa par
   <footer id="footer">
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>iPortfolio</span></strong>
+        &copy; Copyright <strong><span>ReadMingus</span></strong>
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
