--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <header>
     <div class="container">
-      <img src="foto.jpg" alt="Sua Foto" class="avatar" id="avatar" />
+      <img src="foto.png" alt="Sua Foto" class="avatar" id="avatar" />
       <div class="nuvem-pensamento" id="nuvem-sucesso">
         <div class="bolha bolha1"></div>
         <div class="bolha bolha2"></div>
@@ -74,14 +74,14 @@
       <h2>🚀 Projetos</h2>
       <div class="cards">
         <div class="card">
-          <h3>realtime-chat</h3>
-          <p>Um app de chat em tempo real feito com Node.js, WebSocket e MongoDB.</p>
-          <a href="#">🔗 Ver repositório</a>
+          <h3><a href="https://kuromorioficial.github.io/TravelMIngo/#">TravelMingo</a></h3>
+          <p>TravelMingo foi uma solução tecnológica desenvolvida em equipe como parte do nosso projeto de TCC. Seu objetivo é simples e direto: auxiliar viajantes na identificação de pontos turísticos em localidades específicas, facilitando o planejamento de viagens e a descoberta de novos destinos.</p>
+          <a href="https://github.com/KuromoriOficial/TravelMIngo">🔗 Ver repositório</a>
         </div>
         <div class="card">
-          <h3>portfolio-v2</h3>
+          <h3><a href="https://kuromorioficial.github.io/KuromoriOficial/"></a>portfolio</h3>
           <p>Esse próprio portfólio, com tema inspirado no GitHub e animações leves.</p>
-          <a href="#">🔗 Ver repositório</a>
+          <a href="https://github.com/KuromoriOficial/KuromoriOficial">🔗 Ver repositório</a>
         </div>
       </div>
     </section>
@@ -98,7 +98,7 @@
           </div>
         </div>
         <div class="item">
-          <div class="dot"><span>💻</span></div>
+          <div class="dot"><span>💼</span></div>
           <div class="content">
             <h3>🛒 Barbosa Supermercados – Operador de Caixa</h3>
             <span class="tempo">Jan/2024 – Maio/2025</span>
@@ -121,7 +121,7 @@
           </div>
         </div>
         <div class="item">
-          <div class="dot"><span>📘</span></div>
+          <div class="dot"><span>🎓</span></div>
           <div class="content">
             <h3>
               Ensino Superior – Análise e Desenvolvimento de Sistemas (ADS)
@@ -135,6 +135,31 @@
               <li>Segurança e Auditoria de Sistemas</li>
               <li>Redes de Computadores</li>
             </ul>
+          </div>
+        </div>
+        <div class="item">
+          <div class="dot"><span>🖥️</span></div>
+          <div class="content">
+            <h3>Curso – Informática Básica</h3>
+            <span class="tempo">144 horas – Ago/2019 (Concluído)</span>
+            <p>Data Byte — Foco em aprendizagem em ferramentas básicas do Office.</p>
+          </div>
+        </div>
+        <div class="item">
+          <div class="dot"><span>📊</span></div>
+          <div class="content">
+            <h3>Curso – Gestão Administrativa</h3>
+            <span class="tempo">116 horas – Fev/2023 (Concluído)</span>
+            <p>Speed Treinamentos — Gestão de Pessoas, Comunicação e Marketing.</p>
+          </div>
+        </div>
+        <div class="item">
+          <div class="dot"><span>🧑🏻‍💻</span></div>
+          <div class="content">
+            <h3>Curso – Programação</h3>
+            <span class="tempo"> maio/2025 (cursando)</span>
+            <p>Curso DEV — Curso multidisciplinar em tecnologia, com foco em desenvolvimento front-end, back-end, banco
+              de dados, modelagem 3D e criação de jogos.</p>
           </div>
         </div>
       </div>
