--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
                 <span>🌐 Web Semântica</span>
                 <span>⚡ Performance Web</span>
                 <span>🧠 Lógica Avançada</span>
-                <span>🗃️ API REST & GraphQL</span>
+                <span><img src="https://cdn.pixabay.com/photo/2024/07/27/09/35/processor-8925114_1280.png"
+                    alt="Bandeira do Brasil" class="bandeira" /></span><span> Conhecimento em Hardware</span>
                 <span>🔐 Segurança Digital</span>
                 <span>🚀 Projetos em equipe ágil</span>
                 <span>📦 Versionamento com Git</span>
@@ -75,7 +76,9 @@
       <div class="cards">
         <div class="card">
           <h3><a href="https://kuromorioficial.github.io/TravelMIngo/#">TravelMingo</a></h3>
-          <p>TravelMingo foi uma solução tecnológica desenvolvida em equipe como parte do nosso projeto de TCC. Seu objetivo é simples e direto: auxiliar viajantes na identificação de pontos turísticos em localidades específicas, facilitando o planejamento de viagens e a descoberta de novos destinos.</p>
+          <p>TravelMingo foi uma solução tecnológica desenvolvida em equipe como parte do nosso projeto de TCC. Seu
+            objetivo é simples e direto: auxiliar viajantes na identificação de pontos turísticos em localidades
+            específicas, facilitando o planejamento de viagens e a descoberta de novos destinos.</p>
           <a href="https://github.com/KuromoriOficial/TravelMIngo">🔗 Ver repositório</a>
         </div>
         <div class="card">
@@ -209,7 +212,9 @@
     <!-- Mapa -->
     <section id="mapa">
       <h2>🌍 Minha Região</h2>
-      <canvas id="meuMapa" width="100%" height="300"></canvas>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1181.2493593720756!2d-46.93861595837476!3d-23.63314550367699!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94cfa9ca72a1cd1f%3A0x36c52875fa895728!2sR.%20S%C3%A3o%20Cipriano%2C%20109%20-%20Jardim%20Sao%20Miguel%2C%20Cotia%20-%20SP%2C%2006719-310%2C%20Brasil!5e1!3m2!1spt-BR!2sus!4v1749314768040!5m2!1spt-BR!2sus" width="50%"
+        height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+      </iframe>
     </section>
   </main>
   <footer>
