--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Portfolio | André Toshiro Sudo</title>
-  <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
+
   <link rel="stylesheet" href="style.css" />
   <script src="script.js" defer></script>
 </head>
@@ -85,18 +85,15 @@
           </div>
         </div>
 
-<div class="card">
-  <div class="espelho-iframe">
-    <iframe src="." title="Espelho vivo do site" scrolling="no"></iframe>
-  </div>
-  <div class="card-content">
-    <h3>Portfolio (Espelho Vivo)</h3>
-    <p>Este cartão mostra uma miniatura em tempo real do site.</p>
-    <a href="#">🔗 Ver repositório</a>
-  </div>
-</div>
-
-
+        <div class="card" id="espelho-card">
+          <div class="espelho-container">
+            <div class="espelho-site" id="espelho"></div>
+          </div>
+          <div class="card-content">
+            <h3>Portfolio (Reflexo vivo)</h3>
+            <p>Este cartão mostra um espelho em tempo real da própria tela.</p>
+          </div>
+        </div>
       </div>
 
     </section>
