--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
   <link rel="stylesheet" href="style.css" />
   <script src="script.js" defer></script>
 </head>
-
 <body>
   <header>
     <div class="container">
@@ -146,6 +145,7 @@
               <li>Projeto de Software</li>
               <li>Segurança e Auditoria de Sistemas</li>
               <li>Redes de Computadores</li>
+              <li>Interface e Usabilidade</li>
             </ul>
           </div>
         </div>
@@ -222,7 +222,7 @@
     <section id="mapa">
       <h2>🌍 Minha Região</h2>
       <iframe
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1181.2493593720756!2d-46.93861595837476!3d-23.63314550367699!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94cfa9ca72a1cd1f%3A0x36c52875fa895728!2sR.%20S%C3%A3o%20Cipriano%2C%20109%20-%20Jardim%20Sao%20Miguel%2C%20Cotia%20-%20SP%2C%2006719-310%2C%20Brasil!5e1!3m2!1spt-BR!2sus!4v1749314768040!5m2!1spt-BR!2sus"
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1416.7610627932688!2d-46.938235589072015!3d-23.632728813804157!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94cfa9ca0f8eb927:0x7d9f57e9483918ce!2sR.%20S%C3%A3o%20Cipriano%20-%20Cotia,%20SP,%2006719-310!5e1!3m2!1sen!2sbr!4v1749696701446!5m2!1sen!2sbr"
         width="50%" height="300" style="border:0;" allowfullscreen="" loading="lazy"
         referrerpolicy="no-referrer-when-downgrade">
       </iframe>
